# BookLearning

./: .gitignore  PROJECT_PLAN.md  README.md  SESSION_STATUS.md  start.bat
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  ai_config_routes.py  annotation_routes.py  document_routes.py  export_routes.py  parse_routes.py  prompt_routes.py  routes.py
backend/app/core/: __init__.py  config.py  logging_config.py  redaction.py
backend/app/models/: __init__.py  ai_config.py  annotation.py  document.py  export.py  parse.py  prompt.py
backend/app/schemas/: __init__.py  bootstrap.py
backend/app/services/: __init__.py  activity_service.py  ai_config_service.py  ai_service.py  cache_service.py  document_service.py  followup_service.py  hyperlink_service.py  note_service.py  pdf_export_service.py  prompt_service.py  task_service.py
docs/: ARCHITECTURE.md  EXPORT_MATH_GAP.md  MVP_SCOPE.md  README.md  TROUBLESHOOTING.md  WORKFLOW.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AiConfigPanel.tsx  Bookshelf.tsx  ExplanationPanel.tsx  ParseControls.tsx  ParseNotificationCenter.tsx  PdfHyperlinkLayer.tsx  PdfScreenshotCapture.tsx  PromptEditor.tsx
frontend/src/lib/: api.ts  clipboard.ts  export.ts  mathMarkdown.ts  pageSelection.ts  pdf.ts  renderMarkdown.ts
scripts/: pre_commit_audit.ps1
test_and_readme/: USAGE.md
