[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "booklearning-backend"
version = "0.1.0"
description = "Backend service for the BookLearning AI-assisted PDF reader."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pypdf>=5.4.0,<6.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "reportlab>=4.4.4,<5.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1,<9.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
